add text_detect_cv_stage.cpp and other files for text detection

--- a/meson.build
+++ b/meson.build
@@ -50,6 +50,8 @@ subdir('preview')
 subdir('post_processing_stages')
 subdir('utils')
 
+cpp_arguments += '-Wno-error'
+
 add_project_arguments(cpp_arguments, language : 'cpp')
 
 rpicam_app = library(
